# HADES-VLM-Adversarial-Attack

./: HADES Attack.py  README.md  config.py  hades_10_evaluation_39907678.out  main.py  pyproject.toml
config/: config.yaml
evaluate/: __init__.py
output_10/: hades10_100_evaluation_39525627.out
output_10/hades_qwen35/: phase1_prep.json  phase2_images.json  results.json
src/: phase1_text.py  phase2_image.py  phase3_attack.py
src/data/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py  image.py
